AB-1648 CSS alignment issue fix

--- a/styles/redesignHeader/header.scss
+++ b/styles/redesignHeader/header.scss
@@ -481,7 +481,7 @@
   @media screen and (min-width: 768px) {
     #region-re1700018{
       .allenmainherobanner .banner-content {
-        padding: 143px 0 0 0;
+        padding: 115px 0 0 0;
       }
     }
   }
